--- a/jade/head.jade
+++ b/jade/head.jade
@@ -32,6 +32,39 @@
         a(href="").menu__link Красота
       li.menu__item
         a(href="").menu__link Бренды
+    .ul.menu_mobile.animated.fadeInRight
+      li
+        a(href="") Каталог товаров
+        ul
+          li
+            a(href="") Женщинам
+          li
+            a(href="") Мужчинам
+          li
+            a(href="") Детям
+          li
+            a(href="") Спорт
+          li
+            a(href="") Красота
+      li
+        a(href="") Магазины
+        ul
+          li
+            a(href="") Магазин кабачков на луцкой
+          li
+            a(href="") Магазин кабачков на луцкой
+          li
+            a(href="") Магазин кабачков на луцкой
+          li
+            a(href="") Магазин кабачков на луцкой
+          li
+            a(href="") Магазин кабачков на луцкой
+      li
+        a(href="") Акции
+      li
+        a(href="") Коллекции
+      li
+        a(href="") События
     ul.mobile__menu
     .menu__search
       form(action="")
