--- a/jade/scripts.jade
+++ b/jade/scripts.jade
@@ -1,4 +1,5 @@
 //-jade scripts.jade
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js")
 script(src='js/slick.min.js')
+script(src='js/navgoco.min.js')
 script(src='js/all.js')
